--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "server2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon server.js",
+    "dev": "nodemon authServer.js",
+    "jwtOb": "nodemon jwtOb.js",
+    "jwtDb": "nodemon jwtDb.js"
   },
   "author": "",
   "license": "ISC",
